@@ -1,3 +1,8 @@
+2012-12-05 Riccardo Mottola <rm@gnu.org>
+
+	* DiffWrapper.m
+	Replace GS memory macros with standard code.
+
 2012-12-02  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
 	* DiffWindowController.m (_patchMutableString:): Fix off by one
